--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Theme Made By www.w3schools.com - No Copyright -->
 
-  <title>Bootstrap Theme Company Page</title>
+  <title>M&W lab.</title>
 
   <meta charset="utf-8">
 
@@ -65,11 +65,12 @@
 
   .jumbotron {
 
-      background-color: #f4511e;
+    background:url(img/DSC_0005.jpg);
+    background-repeat: no-repeat;;
 
       color: #fff;
 
-      padding: 100px 25px;
+      padding: 300px 50px;
 
       font-family: Montserrat, sans-serif;
 
@@ -133,7 +134,7 @@
 
   .carousel-indicators li {
 
-      border-color: #f4511e;
+      border-color: #B0E0E6;
 
   }
 
@@ -165,7 +166,7 @@
 
   .panel {
 
-      border: 1px solid #f4511e; 
+      border: 1px solid #B0E0E6; 
 
       border-radius:0 !important;
 
@@ -181,7 +182,7 @@
 
   .panel-footer .btn:hover {
 
-      border: 1px solid #f4511e;
+      border: 1px solid #B0E0E6;
 
       background-color: #fff !important;
 
@@ -233,7 +234,7 @@
 
       margin: 15px 0;
 
-      background-color: #f4511e;
+      background-color:#B0E0E6;
 
       color: #fff;
 
@@ -243,7 +244,7 @@
 
       margin-bottom: 0;
 
-      background-color: #f4511e;
+      background-color: #8080800;
 
       z-index: 9999;
 
@@ -263,15 +264,15 @@
 
   .navbar li a, .navbar .navbar-brand {
 
-      color: #fff !important;
+      color: #4169E1 !important;
 
   }
 
   .navbar-nav li a:hover, .navbar-nav li.active a {
 
-      color: #f4511e !important;
+      color: #B0E0E6 !important;
 
-      background-color: #fff !important;
+      background-color: #4169E1 !important;
 
   }
 
@@ -279,7 +280,7 @@
 
       border-color: transparent;
 
-      color: #fff !important;
+      color: #4169E1 !important;
 
   }
 
@@ -347,7 +348,7 @@
 
       </button>
 
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage">Ｍ＆Ｗ</a>
 
     </div>
 
@@ -357,13 +358,13 @@
 
         <li><a href="#about">ABOUT</a></li>
 
-        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#專案">專案</a></li>
 
-        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#學習">學習</a></li>
 
-        <li><a href="#pricing">PRICING</a></li>
+        <li><a href="#計劃">計劃</a></li>
 
-        <li><a href="#contact">CONTACT</a></li>
+        <li><a href="#聯絡我們">聯絡我們</a></li>
 
       </ul>
 
@@ -377,15 +378,13 @@
 
 <div class="jumbotron text-center">
 
-  <h1>Company</h1> 
+  <h1>M & W LAB<h1> 
 
-  <p>We specialize in blablabla</p> 
+  <p>國立台灣海洋大學吳毛實驗室</p> 
 
   <form class="form-inline">
 
-    <input type="email" class="form-control" size="50" placeholder="Email Address" required>
 
-    <button type="button" class="btn btn-danger">Subscribe</button>
 
   </form>
 
@@ -413,7 +412,7 @@
 
     <div class="col-sm-4">
 
-      <span class="glyphicon glyphicon-signal logo"></span>
+      <img src="img/DSC_0021.jpg" width="460" height="345">
 
     </div>
 
@@ -453,9 +452,9 @@
 
 <!-- Container (Services Section) -->
 
-<div id="services" class="container-fluid text-center">
+<div id="專案" class="container-fluid text-center">
 
-  <h2>SERVICES</h2>
+  <h2>專案</h2>
 
   <h4>What we offer</h4>
 
@@ -535,11 +534,11 @@
 
 
 
-<!-- Container (Portfolio Section) -->
+<!-- Container (學習 Section) -->
 
-<div id="portfolio" class="container-fluid text-center bg-grey">
+<div id="學習" class="container-fluid text-center bg-grey">
 
-  <h2>Portfolio</h2><br>
+  <h2>學習</h2><br>
 
   <h4>What we have created</h4>
 
@@ -659,13 +658,13 @@
 
 
 
-<!-- Container (Pricing Section) -->
+<!-- Container (計劃 Section) -->
 
-<div id="pricing" class="container-fluid">
+<div id="計劃" class="container-fluid">
 
   <div class="text-center">
 
-    <h2>Pricing</h2>
+    <h2>計劃</h2>
 
     <h4>Choose a payment plan that works for you</h4>
 
@@ -793,17 +792,17 @@
 
 
 
-<!-- Container (Contact Section) -->
+<!-- Container (聯絡我們 Section) -->
 
-<div id="contact" class="container-fluid bg-grey">
+<div id="聯絡我們" class="container-fluid bg-grey">
 
-  <h2 class="text-center">CONTACT</h2>
+  <h2 class="text-center">聯絡我們</h2>
 
   <div class="row">
 
     <div class="col-sm-5">
 
-      <p>Contact us and we'll get back to you within 24 hours.</p>
+      <p>聯絡我們 us and we'll get back to you within 24 hours.</p>
 
       <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
 
@@ -861,7 +860,7 @@
 
 <script>
 
-var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+var myCenter = new google.maps.LatLng(25.150565, 121.780826);
 
 
 
@@ -871,7 +870,7 @@ var mapProp = {
 
   center:myCenter,
 
-  zoom:12,
+  zoom:15,
 
   scrollwheel:false,
 
