--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
-
-
+</div>
+</div>
 
 <!-- Container (聯絡我們 Section) -->
 
