--- a/index.html
+++ b/index.html
@@ -662,14 +662,14 @@
   <div class="text-center">
 
     <h2>計劃</h2>
-
+<html>
 <ul class="posts">
   {% include JB/setup %}
   {% for post in site.posts %}
     <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
-
+</html>
 	</div>
 </div>
 
