--- a/mymain.html
+++ b/mymain.html
@@ -406,9 +406,10 @@
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+      <br><button class="btn btn-default btn-lg" onclick="myFunc();" > Get in Touch</button>
 
     </div>
+    
 
     <div class="col-sm-4">
 
@@ -804,7 +805,9 @@ $(document).ready(function(){
   });
 
 })
-
+function myFunc() {
+    href="http://www.w3schools.com/html/"
+}
 </script>
 
 
